--- a/themes/3-hexo/_config.yml
+++ b/themes/3-hexo/_config.yml
@@ -218,7 +218,7 @@ friends:
 
 ##########评论设置#############
 comment:
-  on: true
+  on: false
   type: giteement  # 评论系统：gitalk、disqus、gitment、utteranc、livere,注意：使用时，在下方对应位置进行配置
   comment_count: false  # 文章标题下方显示评论数 目前仅支持 gitalk 和 disqus
   ## 使用说明 https://yelog.org//2020/05/23/3-hexo-comment/
@@ -235,7 +235,7 @@ disqus:
 giteement:
   # 是否使用官方js(false可以提升访问速度)
   remote: false
-  redirect_uri: http://im-fan.gitee.io   # 应用回调地址(请和配置的第三方应用保持一致)
+  redirect_uri: http://im-fan.gitee.io/   # 应用回调地址(请和配置的第三方应用保持一致)
   # 不能更改(网上开源项目https://github.com/Rob--W/cors-anywhere作者提供的专门用来跨域服务器的配置)
   oauth_uri: https://cors-anywhere.herokuapp.com/https://gitee.com/oauth/token
   giteeID: imfan  # 你的码云账号英文名
