--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Imfan笔记
 subtitle: '记录&回顾'
 description: '记录一切有趣的技术和事情'
-keywords:
+keywords: 技术 后端 java mysql spring
 author: imfan
 language:
   - zh-CN
