--- a/themes/3-hexo/_config.yml
+++ b/themes/3-hexo/_config.yml
@@ -96,11 +96,11 @@ searchAll: true
 #   field: post
 
 
-copyright: false
+copyright: true
 # Copyright info. of post | 文末版权信息
 
 # 文末声明
-#article_txt: 转载请注明来源，欢迎对文章中的引用来源进行考证，欢迎指出任何有错误或不够清晰的表达。可以在下面评论区评论，也可以邮件至 jaytp@qq.com
+article_txt: 转载请注明来源，欢迎对文章中的引用来源进行考证，欢迎指出任何有错误或不够清晰的表达。可以在下面评论区评论，也可以邮件至wyf3634@163.com
 
 
 word_count: true
