--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "hexo": "^5.0.0",
     "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-search": "^2.4.1",
+    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-i18n": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
