--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: http://imfan.com
+url: https://im-fan.gitee.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
