--- a/themes/3-hexo/_config.yml
+++ b/themes/3-hexo/_config.yml
@@ -298,7 +298,7 @@ CDN:
   jquery_cookie: //cdn.jsdelivr.net/npm/jquery.cookie@1.4.1/jquery.cookie.min.js
   highlight: //cdn.jsdelivr.net/npm/highlightjs@9.16.2/highlight.pack.min.js
   pjax: //cdn.jsdelivr.net/npm/jquery-pjax@2.0.1/jquery.pjax.min.js
-  animate: //cdn.jsdelivr.net/npm/animate.css@4.1.0/animate.min.css
+  animate: //cdn.bootcss.com/animate.css/3.7.2/animate.min.css//cdn.jsdelivr.net/npm/photoswipe@4.1.3/dist/photoswipe.min.js
   nprogres_js: //cdn.jsdelivr.net/npm/nprogress@0.2.0/nprogress.min.js
   mathjax: //cdn.jsdelivr.net/npm/mathjax@2.7.8/unpacked/MathJax.js?config=TeX-MML-AM_CHTML
   photoswipe_js: //cdn.jsdelivr.net/npm/photoswipe@4.1.3/dist/photoswipe.min.js
