--- a/themes/3-hexo/_config.yml
+++ b/themes/3-hexo/_config.yml
@@ -236,9 +236,10 @@ disqus:
 ## 码云评论
 ## https://github.com/JoeyBling/hexo-theme-yilia-plus
 giteement:
+  enable: true  # 是否启用码云评论系统
   # 是否使用官方js(false可以提升访问速度)
   remote: false
-  redirect_uri: http://im-fan.gitee.io/   # 应用回调地址(请和配置的第三方应用保持一致)
+  redirect_uri: https://im-fan.gitee.io/   # 应用回调地址(请和配置的第三方应用保持一致)
   # 不能更改(网上开源项目https://github.com/Rob--W/cors-anywhere作者提供的专门用来跨域服务器的配置)
   oauth_uri: https://cors-anywhere.herokuapp.com/https://gitee.com/oauth/token
   giteeID: imfan  # 你的码云账号英文名
