--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "5.4.2"
   },
   "dependencies": {
+    "gitalk": "^1.7.2",
     "hexo": "^5.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-baidu-sitemap": "^0.1.9",
