--- a/themes/3-hexo/_config.yml
+++ b/themes/3-hexo/_config.yml
@@ -61,10 +61,34 @@ menu:
   friend: # '友链' 按钮
     on: true # 是否展示
   menus: # 添加的其他菜单写在 menus 下，如下三个菜单：动态菜单1、动态菜单2、动态菜单3
-    xxx:
-      on: false
-      url: http://yelog.org/
-      type: 2  # 跳转类型 2：当前页面跳转
+    阮一峰的个人网站:
+      on: true
+      url: https://www.ruanyifeng.com/
+      type: 3
+    巨量引擎:
+      on: true
+      url: https://www.oceanengine.com/
+      type: 3
+    人人都是产品经理:
+      on: true
+      url: https://www.woshipm.com/
+      type: 3
+    疯狂创客圈:
+      on: true
+      url: https://www.cnblogs.com/crazymakercircle
+      type: 3
+    InfoQ:
+      on: true
+      url: https://www.infoq.cn/
+      type: 3
+    书格:
+      on: true
+      url: https://new.shuge.org/
+      type: 3
+    识典古籍:
+      on: true
+      url: https://www.shidianguji.com/
+      type: 3
 
 theme:
   menu:
